fixing responsive on tablet screen

--- a/scss/component/_footer.scss
+++ b/scss/component/_footer.scss
@@ -45,7 +45,7 @@ footer {
     }
   }
   .copyright {
-    padding: 40px 0;
+    padding-top: 40px;
     p {
       color: white;
       text-align: center;
