--- a/scss/component/_products.scss
+++ b/scss/component/_products.scss
@@ -44,7 +44,7 @@
   }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 810px) {
   .products {
     flex-direction: column;
     gap: 60px;
