--- a/scss/component/_services.scss
+++ b/scss/component/_services.scss
@@ -71,7 +71,7 @@
   }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 810px) {
   #services {
     flex-direction: column;
     .newsletter,
